--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +30,7 @@
     "@angular/compiler-cli": "~12.1.0-",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "gh-pages": "^5.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
