--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Install and Build 🔧
       run: |
-        npm ci
+        npm install
         npm run build -- --prod --output-path docs
 
     - name: Deploy 🚀
