--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.1",
+    "@emailjs/browser": "^4.4.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
