--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Angular to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -21,6 +21,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
+      # Build Jekyll (to satisfy GitHub Pages expectations)
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./docs
+          destination: ./_site_jekyll
+      
+      # Build Angular app
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -33,13 +44,22 @@ jobs:
       - name: Build Angular app
         run: npm run build -- --base-href /
       
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+      # Copy Angular build to the root of the site
+      - name: Copy Angular build to site root
+        run: |
+          rm -rf ./_site
+          mkdir -p ./_site
+          cp -R ./dist/alex1kariuki.github.io/browser/* ./_site/
+          cp -R ./_site_jekyll/assets ./_site/assets || true
+      
+      # Add .nojekyll file to prevent GitHub Pages from running Jekyll again
+      - name: Add .nojekyll file
+        run: touch ./_site/.nojekyll
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './dist/alex1kariuki-github-io/browser'
+          path: ./_site
 
   deploy:
     environment:
