Fix GitHub Pages 404 error with proper SPA routing

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Angular to GitHub Pages
 
 on:
   push:
@@ -21,98 +21,46 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      # Build Jekyll first (to satisfy GitHub Pages expectations)
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      
-      - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
-        with:
-          source: ./docs
-          destination: ./_site
-      
-      # Build Angular app
+      # Setup Node.js for Angular build
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'npm'
       
+      # Install dependencies
       - name: Install dependencies
         run: npm ci
       
-      # List directories to debug
-      - name: List directories before build
-        run: |
-          find . -type d -maxdepth 2
-      
-      # Build Angular app with proper configuration
+      # Build Angular with base-href configured for GitHub Pages
       - name: Build Angular app
-        run: npm run build
+        run: npm run build -- --base-href="/"
       
-      # List Angular build output to debug
-      - name: Check Angular build output
+      # Prepare site directory
+      - name: Prepare site directory
         run: |
-          echo "Listing dist directory:"
-          ls -la dist
-          if [ -d "dist/alex1kariuki.github.io" ]; then
-            echo "Listing inside dist/alex1kariuki.github.io:"
-            ls -la dist/alex1kariuki.github.io
-            if [ -d "dist/alex1kariuki.github.io/browser" ]; then
-              echo "Listing inside browser directory:"
-              ls -la dist/alex1kariuki.github.io/browser
-            fi
-          fi
+          # Create site directory
+          mkdir -p _site
+          
+          # Copy Angular build output
+          cp -R dist/alex1kariuki.github.io/browser/* _site/
+          
+          # Add necessary GitHub Pages files
+          touch _site/.nojekyll
+          
+          # Debug output
+          echo "Files in _site directory:"
+          ls -la _site/
       
-      # Copy Angular build to the site
-      - name: Copy Angular build to site
-        run: |
-          if [ -d "dist/alex1kariuki.github.io/browser" ]; then
-            cp -R dist/alex1kariuki.github.io/browser/* ./_site/
-          else
-            echo "Angular build output not found at expected location"
-            exit 1
-          fi
+      # Setup Pages
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       
-      # Create a simple index.html in case of failure
-      - name: Create fallback index.html if needed
-        run: |
-          if [ ! -f "./_site/index.html" ]; then
-            echo "Creating fallback index.html"
-            cat > ./_site/index.html << 'EOL'
-            <!DOCTYPE html>
-            <html>
-            <head>
-              <meta charset="utf-8">
-              <title>Alex Kariuki | Portfolio</title>
-            </head>
-            <body>
-              <h1>Alex Kariuki</h1>
-              <p>Welcome to my portfolio website. The full site is coming soon.</p>
-            </body>
-            </html>
-            EOL
-          fi
-      
-      # Add .nojekyll file to prevent GitHub Pages from running Jekyll again
-      - name: Add .nojekyll file
-        run: touch ./_site/.nojekyll
-      
-      # Verify the final structure
-      - name: Verify site structure
-        run: |
-          echo "Final site structure:"
-          ls -la ./_site
-          if [ -f "./_site/index.html" ]; then
-            echo "index.html exists in the _site directory"
-          else
-            echo "ERROR: index.html is missing from the _site directory"
-          fi
-      
+      # Upload the site artifact
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./_site
+          path: '_site'
 
   deploy:
     environment:
