--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,16 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "404.html",
+                "input": "src",
+                "output": "/"
+              },
+              {
+                "glob": ".nojekyll",
+                "input": ".",
+                "output": "/"
               }
             ],
             "styles": [
