--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -45,7 +45,21 @@ jobs:
       
       # Build Angular with base-href configured for GitHub Pages
       - name: Build Angular app
-        run: npm run build -- --configuration=production
+        run: npm run build -- --configuration=production --base-href=/ --deploy-url=/
+      
+      # Ensure 404.html is present in the build output
+      - name: Copy 404.html to build output
+        run: |
+          echo "Ensuring 404.html is in the build output..."
+          if [ -f "dist/alex1kariuki.github.io/browser/404.html" ]; then
+            echo "✅ 404.html exists in the build output"
+          else
+            echo "⚠️ Creating 404.html in the build output"
+            cp src/404.html dist/alex1kariuki.github.io/browser/404.html || echo "Error copying 404.html"
+          fi
+          
+          # Ensure .nojekyll is present
+          touch dist/alex1kariuki.github.io/browser/.nojekyll
       
       # Verify Angular build output
       - name: Verify build output
