--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
+    "dev": "ng serve --open --configuration=development",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production --base-href=/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:alex1kariuki.github.io": "node dist/alex1kariuki.github.io/server/server.mjs"
